# V-Max

./: .gitignore  pyproject.toml
vmax/: __init__.py
vmax/agents/: datatypes.py
vmax/agents/learning/: replay_buffer.py
vmax/agents/networks/: __init__.py  distributions.py  gradient.py  network_factory.py  network_utils.py
vmax/agents/networks/decoders/: __init__.py
vmax/agents/networks/encoders/: __init__.py  attention_utils.py  lq.py  lqh.py  mlp.py  mtr.py  wayformer.py
vmax/agents/pipeline/: __init__.py  inference.py  pmap.py  training.py
vmax/agents/rule_based/: idm.py  pdm.py
vmax/scripts/evaluate/: evaluate.py  utils.py
vmax/scripts/training/: train.py  train_utils.py
vmax/simulator/: __init__.py
vmax/simulator/features/: __init__.py  features_datatypes.py  masking.py
vmax/simulator/features/extractor/: __init__.py  abstract_extractor.py  gt_extractor.py  idm_extractor.py  segment_extractor.py  utils.py  vec_extractor.py
vmax/simulator/metrics/: __init__.py  aggregators.py  at_fault_collision.py  collector.py  comfort.py  driving_direction_compliance.py  on_multiple_lanes.py  progress_ratio.py  red_light.py  route.py  speed_limit.py  ttc.py  utils.py
vmax/simulator/overrides/: __init__.py
vmax/simulator/overrides/datatypes/: observation.py  roadgraph.py  route.py
vmax/simulator/overrides/visualization/: viz.py
vmax/simulator/visualization/: __init__.py  viz.py
vmax/simulator/wrappers/: __init__.py  base.py  observation.py  reward.py  sdc_path.py
vmax/simulator/wrappers/interfaces/: __init__.py  brax.py  gym.py  multi_agent.py
(+15 files in other folders)
