[project]
name = "V-Max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.7",
    "einops>=0.8.2",
    "gymnasium>=1.2.3",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.2",
    "jax[cuda13]>=0.9.0.1",
    "opencv-python>=4.12.0.88",
    "tensorboardx>=2.6.4",
    "tensorflow-cpu>=2.20.0",
    "tf-keras>=2.20.1",
    "waymo-waymax",
]

[tool.uv]
# Prevent installing the GPU/monolithic TensorFlow package pulled by waymo-waymax.
exclude-dependencies = ["tensorflow"]

[tool.uv.sources]
waymo-waymax = { git = "https://github.com/waymo-research/waymax.git", rev = "main" }

[tool.pyright]
venvPath = "."
venv = ".venv"
